tests/expectations/compiler/option/optional_in_mapping_fail.out
Error [ETYC0372160]: The type `address` cannot be wrapped in an optional.
    --> compiler-test:6:5
     |
   6 |     mapping optional_balances: address? => Foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372161]: The type `address?` is or contains an optional type which cannot be used as the key in a mapping
    --> compiler-test:6:5
     |
   6 |     mapping optional_balances: address? => Foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372161]: The type `Foo` is or contains an optional type which cannot be used as the value in a mapping
    --> compiler-test:6:5
     |
   6 |     mapping optional_balances: address? => Foo;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
